tests/baselines/reference/privacyCheckAnonymousFunctionParameter2.errors.txt
privacyCheckAnonymousFunctionParameter2.ts(4,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
privacyCheckAnonymousFunctionParameter2.ts(10,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== privacyCheckAnonymousFunctionParameter2.ts (2 errors) ====
    export var x = 1;  // Makes this an external module 
    interface Iterator<T> { x: T }
    
    module Q {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export function foo<T>(x: (a: Iterator<T>) => number) {
            return x;
        }
    }
    
    module Q {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        function bar() {
            foo(null);
        }
    }